# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world
    3. /etc/portage/virtuals is _USER_ configs only. Do not copy the old file.
    4. /etc/portage/sets/world is a symlink to /var/lib/portage/world
       It is for convenience. Do not mistake this for the actual file.

  21 Jun 2004; Masatomo Nakano <nakano@gentoo.org> pym/portage.py:
  Fixed problem that 'emerge something' would install all depeneded pkgs 
  even if they are already installed.
  
  21 Jun 2004; Nicholas Jones <carpaski@gentoo.org> portage.py: Disabled the
  URL encoding for BINHOST as it will take a lot of work to get it right.
  Execve try/except added to handle missing binaries and such. Changed the
  default HOME to be TMPDIR/homedir. Try/except on db close operations. Add
  in missing unlocks. Hacked in the /var/lib/portage in a chroot fix.

  21 Jun 2004; Nicholas Jones <carpaski@gentoo.org> emerge: Added more info
  into the profile for the stacked profiles.

  21 Jun 2004; Nicholas Jones <carpaski@gentoo.org> ebuild.sh: The userland
  fixes for *BSD. QA Notice fix for IUSE verbosity on global scope stuff.
  Missing quote fix for QA intercepters. Return 0 in the use_* functions.
  Removed AA from the readonly list.

  21 Jun 2004; Nicholas Jones <carpaski@gentoo.org> dohtml: Karl's update
  which is mostly a rewrite.

  21 Jun 2004; Jason Stubbs <jstubbs@gentoo.org> bin/emerge:
  Modified emerge to build up a fakedb regardless of 'empty' in params, 
  and to incrementally add any packages added to the dep graph.
  (#1343, #8810, #54608)

  20 Jun 2004; Masatomo Nakano <nakano@gentoo.org> bin/repoman:
  Fixed problem which fails to detect IUSE value. (#21544)

  20 Jun 2004; Masatomo Nakano <nakano@gentoo.org> bin/emerge:
  Added an exception code for broken timestamp.chk. (#54380)

  20 Jun 2004; Jason Stubbs <jstubbs@gentoo.org> pym/ebuild.sh: Adjusted 