@@ -9,10 +9,20 @@
     4. /etc/portage/sets/world is a symlink to /var/lib/portage/world
        It is for convenience. Do not mistake this for the actual file.
 
+*portage-2.0.51_pre12 (21 Jun 2003): Fixes
+
+  21 Jun 2004; Nicholas Jones <carpaski@gentoo.org> emerge: Removed the
+  extra spawn of portageq as sandbox handles the python pyo's accesses now.
+
+  21 Jun 2004; Nicholas Jones <carpaski@gentoo.org> portage.py: Fixes for
+  the HOME issues. Correction of permissions from 6770 to 2770.
+
   21 Jun 2004; Masatomo Nakano <nakano@gentoo.org> pym/portage.py:
   Fixed problem that 'emerge something' would install all depeneded pkgs 
   even if they are already installed.
   
+*portage-2.0.51_pre11 (21 Jun 2003): Fixes
+
   21 Jun 2004; Nicholas Jones <carpaski@gentoo.org> portage.py: Disabled the
   URL encoding for BINHOST as it will take a lot of work to get it right.
   Execve try/except added to handle missing binaries and such. Changed the
